--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Open+Sans:wght@500&family=Raleway:wght@100&family=Rubik:ital,wght@1,500&family=Work+Sans:wght@600&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
